spacing fix

--- a/src/renderer/components/core/ViewHeader/ViewHeader.module.css
+++ b/src/renderer/components/core/ViewHeader/ViewHeader.module.css
@@ -2,7 +2,7 @@
   font-weight: normal;
   font-size: 1.2rem;
   flex: 0 0 2rem;
-  margin-bottom: var(--gapLarge);
+  margin-bottom: var(--gapXLarge);
   padding-bottom: var(--gapLarge);
   border-bottom: 1px solid var(--lineColor1);
   color: var(--textColorLight1);
